--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -33,7 +33,8 @@
             <TextView
                 android:id="@+id/today_charge_count"
                 android:layout_width="40dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,7 +55,8 @@
             <TextView
                 android:id="@+id/today_total_money"
                 android:layout_width="40dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -99,7 +101,7 @@
                 android:textSize="16dp"/>
             <EditText
                 android:id="@+id/add_record_process_num"
-                android:layout_width="150dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:hint="请输入流程卡号"
                 android:textSize="16dp"
@@ -108,7 +110,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -118,14 +120,14 @@
                 android:textSize="16dp"/>
             <Spinner
                 android:id="@+id/add_record_model_name"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="9dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -135,14 +137,14 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/add_record_model_price"
-                android:layout_width="150dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -152,7 +154,7 @@
                 android:textSize="16dp"/>
             <EditText
                 android:id="@+id/add_record_qulified_num"
-                android:layout_width="150dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:hint="请输入合格个数"
                 android:textSize="16dp"
@@ -161,7 +163,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -171,15 +173,33 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/add_record_add_date"
-                android:layout_width="150dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:textColor="#3db0ed"
+                android:textSize="16dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text="备         注："
+                android:textSize="16dp"/>
+            <EditText
+                android:id="@+id/add_record_comment"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:hint="选填"
                 android:textSize="16dp"/>
         </LinearLayout>
 
         <Button
             android:id="@+id/add_record_add_button"
-            android:layout_width="80dp"
+            android:layout_width="70dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="right"
