添加历史页面查询条件；activity添加和导航栏登高的隐藏view，避免内容被遮挡

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,22 @@
     tools:context="com.zhangwenl1993163.chargehelper.view.activity.MainActivity">
 
     <LinearLayout
-        android:id="@+id/panel_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+        <LinearLayout
+            android:id="@+id/panel_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"></LinearLayout>
+        <View
+            android:id="@+id/under_navigation"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="0dp"
+            android:layout_height="100dp"/>
     </LinearLayout>
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
