--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -7,10 +7,9 @@
     <!--统计区域start-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="5dp"
-        android:layout_weight="3">
+        android:layout_margin="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="今日金额："
+                android:text="今日收入："
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/today_total_money"
@@ -87,6 +86,7 @@
         </LinearLayout>
     </LinearLayout>
     <!--统计区域end-->
+
     <!--分割线start-->
     <View
         android:layout_width="wrap_content"
@@ -94,139 +94,145 @@
         android:background="#666"/>
     <!--分割线end-->
     <!--记账区域start-->
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="10dp"
         android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:text="新增记录"
-            android:textSize="25dp"
-            android:textStyle="bold"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="新增记录"
+                android:textSize="25dp"
+                android:textStyle="bold"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="流程卡号："
-                android:textSize="16dp"/>
-            <EditText
-                android:id="@+id/add_record_process_num"
-                android:layout_width="180dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="流程卡号："
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/add_record_process_num"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:hint="请输入流程卡号"
+                    android:textSize="16dp"
+                    android:inputType="numberSigned"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="请输入流程卡号"
-                android:textSize="16dp"
-                android:inputType="numberSigned"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="产品型号："
+                    android:textSize="16dp"/>
+                <Spinner
+                    android:id="@+id/add_record_model_name"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="产品型号："
-                android:textSize="16dp"/>
-            <Spinner
-                android:id="@+id/add_record_model_name"
-                android:layout_width="200dp"
+                android:layout_marginTop="9dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="型号单价："
+                    android:textSize="16dp"/>
+                <TextView
+                    android:id="@+id/add_record_model_price"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="合格个数："
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/add_record_qulified_num"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:hint="请输入合格个数"
+                    android:textSize="16dp"
+                    android:inputType="numberSigned"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="型号单价："
-                android:textSize="16dp"/>
-            <TextView
-                android:id="@+id/add_record_model_price"
-                android:layout_width="180dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="添加日期："
+                    android:textSize="16dp"/>
+                <TextView
+                    android:id="@+id/add_record_add_date"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="#3db0ed"
+                    android:textSize="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="合格个数："
-                android:textSize="16dp"/>
-            <EditText
-                android:id="@+id/add_record_qulified_num"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:hint="请输入合格个数"
-                android:textSize="16dp"
-                android:inputType="numberSigned"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="添加日期："
-                android:textSize="16dp"/>
-            <TextView
-                android:id="@+id/add_record_add_date"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:textColor="#3db0ed"
-                android:textSize="16dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="备         注："
-                android:textSize="16dp"/>
-            <EditText
-                android:id="@+id/add_record_comment"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:hint="选填"
-                android:textSize="16dp"/>
-        </LinearLayout>
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="备         注："
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/add_record_comment"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:hint="选填"
+                    android:textSize="16dp"/>
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/add_record_add_button"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
-            android:text="添加"/>
-    </LinearLayout>
+            <Button
+                android:id="@+id/add_record_add_button"
+                android:layout_width="70dp"
+                android:layout_height="35dp"
+                android:background="@drawable/button_background"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="添加"/>
+        </LinearLayout>
+    </ScrollView>
     <!--记账区域end-->
 </LinearLayout>
