历史记录页面产品列表添加滑动选项，修复sql排序失败问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     tools:context="com.zhangwenl1993163.chargehelper.view.activity.MainActivity">
 
     <LinearLayout
