--- a/app/src/main/res/layout/history_panel.xml
+++ b/app/src/main/res/layout/history_panel.xml
@@ -6,7 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,7 +20,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="25dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -41,8 +42,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -71,14 +72,58 @@
             android:layout_height="1dp"
             android:background="#666"
             android:layout_marginTop="5dp"/>
-        <ScrollView
+        <TextView
+            android:id="@+id/history_tips"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ListView
-                android:id="@+id/history_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></ListView>
-        </ScrollView>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="italic"
+            android:textSize="10dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:text="流程卡号"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:text="型号"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:text="个数"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:text="总金额"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#666"
+            android:layout_marginTop="5dp"/>
+
+        <com.yydcdut.sdlv.SlideAndDragListView
+            android:id="@+id/history_container"
+            android:layout_width="match_parent"
+            android:listSelector="#00000000"
+            android:cacheColorHint="#00000000"
+            android:layout_height="fill_parent"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
