--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -31,7 +31,8 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/today_charge_count"
-                android:layout_width="40dp"
+                android:layout_width="70dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
             <TextView
@@ -53,7 +54,8 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/today_total_money"
-                android:layout_width="40dp"
+                android:layout_width="70dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
             <TextView
@@ -75,7 +77,8 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/month_total_money"
-                android:layout_width="40dp"
+                android:layout_width="70dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
             <TextView
