--- a/app/src/main/res/layout/history_panel.xml
+++ b/app/src/main/res/layout/history_panel.xml
@@ -63,7 +63,7 @@
                 android:id="@+id/query_button"
                 android:layout_width="70dp"
                 android:layout_height="35dp"
-                android:text="查询"
+                android:text="刷新"
                 android:background="@drawable/button_background" />
         </LinearLayout>
 
@@ -118,7 +118,7 @@
             android:background="#666"
             android:layout_marginTop="5dp"/>
 
-        <com.yydcdut.sdlv.SlideAndDragListView
+        <com.baoyz.swipemenulistview.SwipeMenuListView
             android:id="@+id/history_container"
             android:layout_width="match_parent"
             android:listSelector="#00000000"
