--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -6,14 +6,9 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/item_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-    <TextView
         android:id="@+id/item_process_card_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textSize="16dp"
         android:gravity="center"
         android:layout_gravity="center"
@@ -21,7 +16,7 @@
     <TextView
         android:id="@+id/item_module_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textSize="16dp"
         android:gravity="center"
         android:layout_gravity="center"
@@ -29,7 +24,7 @@
     <TextView
         android:id="@+id/item_qulified_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textSize="16dp"
         android:gravity="center"
         android:layout_gravity="center"
@@ -37,7 +32,7 @@
     <TextView
         android:id="@+id/item_total_money"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textSize="16dp"
         android:gravity="center"
         android:layout_gravity="center"
