--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:orientation="horizontal">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/item_process_card_number"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_weight="1"/>
-    <TextView
-        android:id="@+id/item_module_name"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_weight="1"/>
-    <TextView
-        android:id="@+id/item_qulified_number"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_weight="1"/>
-    <TextView
-        android:id="@+id/item_total_money"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_weight="1"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/product_list_model_name"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textSize="16dp"
+            android:gravity="center"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/product_list_model_price"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textSize="16dp"
+            android:gravity="center"
+            android:layout_weight="1"/>
+    </LinearLayout>
+</android.support.constraint.ConstraintLayout>
