--- a/app/src/main/res/layout/update_record_dialog.xml
+++ b/app/src/main/res/layout/update_record_dialog.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -27,7 +27,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -44,7 +44,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -61,7 +61,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -82,7 +82,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -99,7 +99,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
