禁止横屏，新增记录时可以修改单价，修改记录时不可选择型号，工价可以删除，修改图标

--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -166,10 +166,13 @@
                     android:layout_marginLeft="25dp"
                     android:text="型号单价："
                     android:textSize="16dp"/>
-                <TextView
+                <EditText
                     android:id="@+id/add_record_model_price"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:hint="请输入型号单价"
+                    android:maxLength="6"
                     android:textSize="16dp"/>
             </LinearLayout>
             <LinearLayout
