--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -31,7 +31,7 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/today_charge_count"
-                android:layout_width="70dp"
+                android:layout_width="80dp"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
@@ -54,7 +54,7 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/today_total_money"
-                android:layout_width="70dp"
+                android:layout_width="80dp"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
@@ -77,7 +77,30 @@
                 android:textSize="16dp"/>
             <TextView
                 android:id="@+id/month_total_money"
-                android:layout_width="70dp"
+                android:layout_width="80dp"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="元"
+                android:textSize="16dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text="今年收入："
+                android:textSize="16dp"/>
+            <TextView
+                android:id="@+id/year_total_money"
+                android:layout_width="80dp"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"/>
