--- a/app/src/main/res/layout/analyze_panel.xml
+++ b/app/src/main/res/layout/analyze_panel.xml
@@ -4,17 +4,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="5dp">
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="工资趋势"
-        android:textSize="25dp"
-        android:textStyle="bold"/>
-    <com.github.mikephil.charting.charts.LineChart
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="工资趋势"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:layout_weight="1"/>
+        <Spinner
+            android:id="@+id/salary_analyze_items"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:entries="@array/salary_analyze"/>
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/analyze_salary"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
 
