--- a/app/src/main/res/layout/analyze_panel.xml
+++ b/app/src/main/res/layout/analyze_panel.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="horizontal"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"/>
 
 </LinearLayout>
