--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -143,7 +143,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
                 <TextView
@@ -163,7 +165,9 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
@@ -180,7 +184,9 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="9dp"
                 android:orientation="horizontal">
                 <TextView
@@ -200,7 +206,9 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
@@ -220,7 +228,9 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
@@ -232,13 +242,16 @@
                 <TextView
                     android:id="@+id/add_record_add_date"
                     android:layout_width="180dp"
+                    android:layout_marginLeft="3dp"
                     android:layout_height="wrap_content"
                     android:textColor="#3db0ed"
                     android:textSize="16dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
