--- a/app/src/main/res/layout/analyze_panel.xml
+++ b/app/src/main/res/layout/analyze_panel.xml
@@ -21,7 +21,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="工资趋势"
-                    android:textSize="25dp"
+                    android:textSize="25sp"
                     android:textStyle="bold"
                     android:layout_weight="1"/>
                 <Spinner
@@ -48,7 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="型号分布"
-                    android:textSize="25dp"
+                    android:textSize="25sp"
                     android:textStyle="bold"
                     android:layout_weight="1"/>
                 <Spinner
