--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:text="统计数据"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:text="今日个数："
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <TextView
                 android:id="@+id/today_charge_count"
                 android:layout_width="80dp"
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="个"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:text="今日收入："
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <TextView
                 android:id="@+id/today_total_money"
                 android:layout_width="80dp"
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="元"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:text="本月收入："
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <TextView
                 android:id="@+id/month_total_money"
                 android:layout_width="80dp"
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="元"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:text="今年收入："
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <TextView
                 android:id="@+id/year_total_money"
                 android:layout_width="80dp"
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="元"
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
     </LinearLayout>
     <!--统计区域end-->
@@ -138,7 +138,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:text="新增记录"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textStyle="bold"/>
 
             <LinearLayout
@@ -153,14 +153,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:text="流程卡号："
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
                 <EditText
                     android:id="@+id/add_record_process_num"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:maxLength="15"
                     android:hint="请输入流程卡号"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:inputType="numberSigned"/>
             </LinearLayout>
             <LinearLayout
@@ -175,12 +175,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:text="产品型号："
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
                 <Spinner
                     android:id="@+id/add_record_model_name"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -194,7 +194,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:text="型号单价："
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
                 <EditText
                     android:id="@+id/add_record_model_price"
                     android:layout_width="180dp"
@@ -202,7 +202,7 @@
                     android:inputType="numberDecimal"
                     android:hint="请输入型号单价"
                     android:maxLength="6"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -216,14 +216,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:text="合格个数："
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
                 <EditText
                     android:id="@+id/add_record_qulified_num"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:maxLength="3"
                     android:hint="请输入合格个数"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:inputType="numberSigned"/>
             </LinearLayout>
             <LinearLayout
@@ -238,14 +238,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:text="添加日期："
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
                 <TextView
                     android:id="@+id/add_record_add_date"
                     android:layout_width="180dp"
                     android:layout_marginLeft="3dp"
                     android:layout_height="wrap_content"
                     android:textColor="#3db0ed"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -259,14 +259,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:text="备         注："
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
                 <EditText
                     android:id="@+id/add_record_comment"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:maxLength="40"
                     android:hint="选填"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp"/>
             </LinearLayout>
 
             <Button
