--- a/app/src/main/res/layout/check_search_dialog.xml
+++ b/app/src/main/res/layout/check_search_dialog.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="年         份："
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
         <Spinner
             android:id="@+id/check_query_year"
             android:layout_width="160dp"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="月         份："
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
 
         <Spinner
             android:id="@+id/check_query_months"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="排序方式："
-            android:textSize="16dp" />
+            android:textSize="16sp" />
         <Spinner
             android:id="@+id/check_sort_item"
             android:layout_width="160dp"
