--- a/app/src/main/res/layout/history_panel.xml
+++ b/app/src/main/res/layout/history_panel.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="查询条件"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"/>
 
@@ -26,18 +26,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="日         期："
-                android:textSize="16dp"/>
+                android:textSize="16sp"/>
             <Spinner
                 android:id="@+id/query_year"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></Spinner>
+                android:layout_height="wrap_content"/>
 
             <Spinner
                 android:id="@+id/query_months"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:entries="@array/months"></Spinner>
+                android:entries="@array/months"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="排序方式："
-                android:textSize="16dp" />
+                android:textSize="16sp" />
             <Spinner
                 android:id="@+id/sort_item"
                 android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textStyle="italic"
-            android:textSize="10dp"/>
+            android:textSize="10sp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,28 +78,28 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="流程卡号"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="型号"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="个数"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="总金额"/>
         </LinearLayout>
         <View
