--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -12,14 +12,14 @@
             android:id="@+id/product_list_model_name"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:gravity="center"
             android:layout_weight="1"/>
         <TextView
             android:id="@+id/product_list_model_price"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:gravity="center"
             android:layout_weight="1"/>
     </LinearLayout>
