--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/item_process_card_number"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_weight="1"/>
@@ -17,7 +17,7 @@
         android:id="@+id/item_module_name"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_weight="1"/>
@@ -25,7 +25,7 @@
         android:id="@+id/item_qulified_number"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_weight="1"/>
@@ -33,7 +33,7 @@
         android:id="@+id/item_total_money"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_weight="1"/>
