--- a/app/src/main/res/layout/update_record_dialog.xml
+++ b/app/src/main/res/layout/update_record_dialog.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="流程卡号："/>
         <EditText
             android:id="@+id/update_item_card"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:maxLength="15"
             android:hint="请输入流程卡号"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:inputType="numberSigned"/>
     </LinearLayout>
 
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="产品型号："/>
         <TextView
             android:id="@+id/update_item_model_name"
@@ -51,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="型号单价："/>
         <TextView
             android:id="@+id/update_item_model_price"
@@ -68,7 +68,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="合格个数："/>
         <EditText
             android:id="@+id/update_item_qulified_num"
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:maxLength="3"
             android:hint="请输入合格个数"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:inputType="numberSigned"/>
     </LinearLayout>
 
@@ -89,7 +89,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="添加日期："/>
         <TextView
             android:id="@+id/update_item_add_date"
@@ -106,14 +106,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="备         注："/>
         <EditText
             android:id="@+id/update_item_comment"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:maxLength="40"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:hint="选填"/>
     </LinearLayout>
 
