--- a/app/src/main/res/layout/check_search_dialog.xml
+++ b/app/src/main/res/layout/check_search_dialog.xml
@@ -19,7 +19,7 @@
         <Spinner
             android:id="@+id/check_query_year"
             android:layout_width="160dp"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -36,7 +36,7 @@
         <Spinner
             android:id="@+id/check_query_months"
             android:layout_width="160dp"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,7 +52,23 @@
         <Spinner
             android:id="@+id/check_sort_item"
             android:layout_width="160dp"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="排序类型："
+            android:textSize="16sp" />
+        <Spinner
+            android:id="@+id/check_sort_type"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </LinearLayout>
